# compSys-projects--code

LED_transition_animation/: CMakeLists.txt  ReadMe  transition.c
SimpleTimer/: CMakeLists.txt  ReadMe  timer.c
buzzer_music_player/: buzzer_music_player.py  readMe
mechanical_clock/: mech_clock.py  readme
